--- a/src/pages/mdx-layout.mdx
+++ b/src/pages/mdx-layout.mdx
@@ -1,9 +1,9 @@
-import MdxLayout from '../components/mdx-layout'
+import { MDXLayout } from "../components/MDXComponents"
 
 # Welcome to my MDX page!
 
 With layout!
 
-export default function MDXPage({ children }) {
-    return <MdxLayout>{children}</MdxLayout>;
+export default function MDXLayoutPage({ children }) {
+  return <MDXLayout>{children}</MDXLayout>
 }
